    (Mike Yoder via stevel)

    HADOOP-12350. WASB Logging: Improve WASB Logging around deletes, reads and
    writes (Dushyanth via cnauroth)

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

    HADOOP-11032. Replace use of Guava's Stopwatch with Hadoop's StopWatch
    (ozawa)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-8151. Error handling in snappy decompressor throws invalid
    exceptions. (Matt Foley via harsh)

    HADOOP-12407. Test failing: hadoop.ipc.TestSaslRPC. (stevel)

    HADOOP-11918. Listing an empty s3a root directory throws FileNotFound.
    (Lei (Eddy) Xu via cnauroth)

    HADOOP-12089. StorageException complaining " no lease ID" when updating
    FolderLastModifiedTime in WASB. (Duo Xu via cnauroth)

    HADOOP-12239. StorageException complaining " no lease ID" when updating
    FolderLastModifiedTime in WASB. (Duo Xu via cnauroth)

    HADOOP-12438. TestLocalFileSystem tests can fail on Windows after HDFS-8767
    fix for handling pipe. (cnauroth)

    HADOOP-12437. Allow SecurityUtil to lookup alternate hostnames.
    (Arpit Agarwal)

    HADOOP-12542. TestDNS fails on Windows after HADOOP-12437. (cnauroth)

    HADOOP-12334. Change Mode Of Copy Operation of HBase WAL Archiving to bypass
    Azure Storage Throttling after retries. (Gaurav Kanade via cnauroth)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-11291. Log the cause of SASL connection failures.
    (Stephen Chu via cnauroth)

    HADOOP-10786. Fix UGI#reloginFromKeytab on Java 8. (Stephen Chu via wheat9)

  OPTIMIZATIONS

  BUG FIXES
    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

Release 2.7.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES
